<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/anaSayfa"
    tools:context="com.recep.bloger.UserAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etKull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kullan_c_ad" />

        <EditText
            android:id="@+id/etPass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parola"
            android:inputType="textPassword"
            android:layout_marginTop="5dp" />

        <EditText
            android:id="@+id/etPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parola_tekrar"
            android:inputType="textPassword"
            android:layout_marginTop="5dp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/kullan_c_lemleri"
            tools:targetApi="ice_cream_sandwich" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/konu_lemleri"
            tools:targetApi="ice_cream_sandwich" />

        <Button
            android:id="@+id/btnKaydet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickKaydet"
            android:layout_marginTop="10dp"
            android:text="@string/kaydet" />

        <Button
            android:visibility="gone"
            android:id="@+id/btnGuncelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickKaydet"
            android:text="@string/gun" />


    </LinearLayout>

</LinearLayout>
