<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/anaSayfa"
    tools:context="com.recep.bloger.KonuAddActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etKonuBas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/konu_baslik" />

        <EditText
            android:id="@+id/etKonu"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:hint="@string/konu"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnKonuKaydet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickKonuKaydet"
            android:text="@string/kaydet" />


    </LinearLayout>
</LinearLayout>
