<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/anaSayfa"
    android:background="@color/arkaPlan"
    tools:context="com.recep.bloger.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/blog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/etKullanici"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/kullan_c_ad" />

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/etParola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/parola" />

        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/btnGiris"
            android:onClick="onClickGiris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/giri" />
    </LinearLayout>

</LinearLayout>
